--- a/package.json
+++ b/package.json
@@ -118,7 +118,8 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@elastic/elasticsearch": "^7.14.0",
+    "@elastic/elasticsearch": "^7.15.0",
+    "@elastic/elasticsearch-canary": "^8.0.0-canary.28",
     "@hapi/hapi": "^20.1.2",
     "@koa/router": "^9.0.1",
     "@types/node": "^13.7.4",
