tests: fix TAV test breakage with node 17 (hapi <=16, fastify <0.36.0) (#2387)
This was broken in #2380. Versions of hapi <=16 did not support the
'host' option to `new Server`, but instead to `server.connection`.
Also really old versions of fastify (v0.35.7) cannot even be npm installed
with the npm included in node v17. This drops support for fastify <1.0.0
and updates the TAV test matrix to only test a given fastify version
with its supported versions of node per https://www.fastify.io/docs/latest/LTS/

--- a/.tav.yml
+++ b/.tav.yml
@@ -407,8 +407,28 @@ restify-new:
     - node test/instrumentation/modules/restify/basic.test.js
     - node test/instrumentation/modules/restify/set-framework.test.js
 
+# https://www.fastify.io/docs/latest/LTS/
+# - #1086 suggests fastify@2.4.0 was a broken release, skip it.
+fastify-v1:
+  name: fastify
+  versions: '1.x'
+  node: '>=6 <12'
+  commands:
+    - node test/instrumentation/modules/fastify/fastify.test.js
+    - node test/instrumentation/modules/fastify/async-await.test.js
+    - node test/instrumentation/modules/fastify/set-framework.test.js
+fastify-v2:
+  name: fastify
+  versions: '>=2.0.0 <2.4.0 || >2.4.0 <3'
+  node: '>=6 <15'
+  commands:
+    - node test/instrumentation/modules/fastify/fastify.test.js
+    - node test/instrumentation/modules/fastify/async-await.test.js
+    - node test/instrumentation/modules/fastify/set-framework.test.js
 fastify:
-  versions: '>=0.27.0 <0.29.0 || >0.29.0 <2.4.0 || >2.4.0'
+  name: fastify
+  versions: '>=3.0.0'
+  node: '>=10'
   commands:
     - node test/instrumentation/modules/fastify/fastify.test.js
     - node test/instrumentation/modules/fastify/async-await.test.js
