--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "lint": "standard",
     "lint:fix": "standard --fix",
     "coverage": "COVERAGE=true ./test/script/run_tests.sh",
+    "test:prepare": "./test/script/prepare-tests.sh",
     "test": "./test/script/run_tests.sh",
     "test:cli": "node test/script/cli.js",
-    "test:deps": "dependency-check start.js index.js 'lib/**/*.js' 'test/**/*.js' --no-dev -i async_hooks -i perf_hooks -i parseurl",
-    "test:tav": "tav --quiet",
+    "test:deps": "dependency-check start.js index.js 'lib/**/*.js' 'test/**/*.js' '!test/instrumentation/modules/**' --no-dev -i async_hooks -i perf_hooks -i parseurl",
+    "test:tav": "./test/scripts/tav-in-module-dirs.sh && tav --quiet",
     "test:docs": "./test/script/docker/run_docs.sh",
     "test:types": "tsc --project test/types/tsconfig.json && tsc --project test/types/transpile/tsconfig.json && node test/types/transpile/index.js && tsc --project test/types/transpile-default/tsconfig.json && node test/types/transpile-default/index.js",
     "test:babel": "babel test/babel/src.js --out-file test/babel/out.js && node test/babel/out.js",
@@ -149,12 +150,10 @@
     "get-port": "^5.1.1",
     "got": "^9.6.0",
     "graphql": "^15.3.0",
-    "handlebars": "^4.7.3",
     "hapi": "^18.1.0",
     "https-pem": "^2.0.0",
     "inquirer": "^0.12.0",
     "ioredis": "^4.16.0",
-    "jade": "^1.11.0",
     "knex": "^0.21.2",
     "koa": "^2.11.0",
     "koa-bodyparser": "^3.2.0",
@@ -174,7 +173,6 @@
     "once": "^1.4.0",
     "p-finally": "^2.0.1",
     "pg": "^8.7.1",
-    "pug": "^2.0.4",
     "redis": "^3.0.2",
     "request": "^2.88.2",
     "restify": "^8.5.1",
