migrate mysql tav; restore removed devDependencies

--- a/package.json
+++ b/package.json
@@ -146,18 +146,23 @@
     "fastify": "^2.12.0",
     "fastify-formbody": "^3.2",
     "finalhandler": "^1.1.2",
+    "generic-pool": "^3.7.1",
     "get-port": "^5.1.1",
+    "got": "^9.6.0",
     "graphql": "^15.3.0",
+    "handlebars": "^4.7.3",
     "hapi": "^18.1.0",
     "https-pem": "^2.0.0",
     "inquirer": "^0.12.0",
     "ioredis": "^4.16.0",
+    "jade": "^1.11.0",
     "knex": "^0.21.2",
     "koa": "^2.11.0",
     "koa-bodyparser": "^3.2.0",
     "koa-router": "^9.0.1",
     "lambda-local": "^1.7.1",
     "memcached": "^2.2.2",
+    "mimic-response": "^2.1.0",
     "mkdirp": "^0.5.1",
     "module-details-from-path": "^1.0.3",
     "mongodb": "^4.1.0",
@@ -170,6 +175,7 @@
     "once": "^1.4.0",
     "p-finally": "^2.0.1",
     "pg": "^8.7.1",
+    "pug": "^2.0.4",
     "redis": "^3.0.2",
     "request": "^2.88.2",
     "restify": "^8.5.1",
