--- a/package.json
+++ b/package.json
@@ -111,7 +111,12 @@
     "sql-summary": "^1.0.1",
     "traceparent": "^1.0.0",
     "traverse": "^0.6.6",
-    "unicode-byte-truncate": "^1.0.0"
+    "unicode-byte-truncate": "^1.0.0",
+    "@opentelemetry/api": "1.0.3",
+    "@opentelemetry/sdk-trace-base": "1.0.0",
+    "@opentelemetry/sdk-trace-node": "1.0.0",
+    "@opentelemetry/instrumentation": "0.26.0",
+    "@opentelemetry/instrumentation-http": "0.26.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
