ci: use the tap2JunitExt step
this step is the hack to support one file with several TAP executions from different files

this could be replaced if the test executions reported one file per test file executed, meanwhile let's put back the junit reporting

--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -371,7 +371,7 @@ def generateStep(Map params = [:]){
             // TAV tests run 'npm run test:tav' which does *not* produce TAP
             // output.
             if (!tav?.trim()) {
-              tap2Junit(pattern: '*-output.tap', suffix: 'junit.xml', package: 'Node.js', failNever: true)
+              tap2JunitExt(pattern: '*-output.tap', suffix: 'junit.xml', package: 'Node.js', failNever: true)
             }
           }
         }
