try tap-junit, it is more up to date; it handles empty .tap files (emits Junit XML with 0 tests)

--- a/package.json
+++ b/package.json
@@ -179,6 +179,7 @@
     "rimraf": "^3.0.2",
     "send": "^0.17.1",
     "standard": "^14.3.3",
+    "tap-junit": "^5.0.1",
     "tap-xunit": "^2.4.1",
     "tape": "^5.0.0",
     "tedious": "^9.2.1",
