tests: ensure CI test run generates proper junit output files for Jenkins reporting (#2478)
This stop using the `tap2Junit` var from apm-pipeline-library and handles 
TAP -> junit conversion in this repo.

This change results in so many more test cases being reported (30 -> 200,000)
that it depends on https://github.com/elastic/apm-pipeline-library/pull/1417
(already released) to stop downloading full `tests-info.json` from the Jenkins
API (MBs of JSON that takes >30minutes to download).

Fixes: #2443
Co-authored-by: Victor Martinez <victormartinezrubio@gmail.com>

--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -368,11 +368,8 @@ def generateStep(Map params = [:]){
           } catch(e){
             error(e.toString())
           } finally {
-            // TAV tests run 'npm run test:tav' which does *not* produce TAP
-            // output.
-            if (!tav?.trim()) {
-              tap2Junit(pattern: '*-output.tap', suffix: 'junit.xml', package: 'Node.js', failNever: true)
-            }
+            junit(testResults: "test_output/*.junit.xml", allowEmptyResults: true, keepLongStdio: true)
+            archiveArtifacts(artifacts: "test_output/*.tap", allowEmptyArchive: true)
           }
         }
       }
