--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "columnify": "^1.5.4",
     "connect": "^3.7.0",
     "container-info": "^1.0.1",
+    "dashdash": "^2.0.0",
     "dependency-check": "^4.1.0",
     "elasticsearch": "^16.5.0",
     "express": "^4.17.1",
@@ -178,6 +179,7 @@
     "rimraf": "^3.0.2",
     "send": "^0.17.1",
     "standard": "^14.3.3",
+    "tap-junit": "^5.0.1",
     "tape": "^5.0.0",
     "tedious": "^9.2.1",
     "test-all-versions": "^4.1.1",
