fix: ensure correct run context for 'mongodb' instrumentation (#2512)
- Add 'mongodb' to test-all-versions (TAV) testing.
- Ensure a mongodb span is not accidentally a child of an inflight
  mongodb span
- Fix an issue where instrumentation of `new MongoClient(url)` would
  fail because the internal handling of `arguments` would add
  `arguments[1]` but arguments.length stayed at 1. Fix by first
  changing to an Array.
- Fix instrument of a connection made using the MongoClient.connect
  static method. https://github.com/elastic/apm-agent-nodejs/issues/2467

Refs: #2430
Fixes: #2467

--- a/.tav.yml
+++ b/.tav.yml
@@ -98,9 +98,17 @@ pg-new-node:
 mongodb-core:
   versions: '>=1.2.19 <4'
   commands: node test/instrumentation/modules/mongodb-core.test.js
-mongodb:
-  versions: '>=3.3'
+
+mongodb-3:
+  name: mongodb
+  versions: '>=3.3 <4'
   commands: node test/instrumentation/modules/mongodb.test.js
+mongodb-4:
+  name: mongodb
+  versions: '>=4 <5'
+  node: '>=12'
+  commands: node test/instrumentation/modules/mongodb.test.js
+
 bluebird:
   versions: '>=2 <4'
   commands:
