--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -28,7 +28,7 @@ pipeline {
     issueCommentTrigger("(${obltGitHubComments()}|^run (module|benchmark) tests.*)")
   }
   parameters {
-    booleanParam(name: 'Run_As_Master_Branch', defaultValue: false, description: 'Allow to run any steps on a PR, some steps normally only run on master branch.')
+    booleanParam(name: 'Run_As_Main_Branch', defaultValue: false, description: 'Allow to run any steps on a PR, some steps normally only run on main branch.')
     booleanParam(name: 'bench_ci', defaultValue: true, description: 'Enable benchmarks.')
     booleanParam(name: 'tav_ci', defaultValue: true, description: 'Enable TAV tests.')
     booleanParam(name: 'tests_ci', defaultValue: true, description: 'Enable tests.')
@@ -117,7 +117,7 @@ pipeline {
             branch '^greenkeeper/.*'
           }
           anyOf {
-            expression { return params.Run_As_Master_Branch }
+            expression { return params.Run_As_Main_Branch }
             triggeredBy 'TimerTrigger'
             changeRequest()
             expression { return env.TAV_UPDATED != "false" }
@@ -160,7 +160,7 @@ pipeline {
         beforeAgent true
         allOf {
           anyOf {
-            expression { return params.Run_As_Master_Branch }
+            expression { return params.Run_As_Main_Branch }
             triggeredBy 'TimerTrigger'
           }
           expression { return params.test_edge_ci }
@@ -254,7 +254,7 @@ pipeline {
           expression { return env.ONLY_DOCS == "false" }
           anyOf {
             changeRequest()
-            expression { return !params.Run_As_Master_Branch }
+            expression { return !params.Run_As_Main_Branch }
           }
         }
       }
@@ -287,7 +287,7 @@ pipeline {
                   branch: 'main')
               // It's required to transform the tag value to the artifact version
               sh script: ".ci/bump-version.sh ${env.BRANCH_NAME.replaceAll('^v', '')}", label: 'Bump version'
-              // The opbeans pipeline will trigger a release for the master branch
+              // The opbeans pipeline will trigger a release for the main branch
               gitPush()
               // The opbeans pipeline will trigger a release for the release tag
               gitCreateTag(tag: "${env.BRANCH_NAME}")
@@ -312,9 +312,9 @@ pipeline {
         beforeAgent true
         allOf {
           anyOf {
-            branch 'master'
+            branch 'main'
             tag pattern: 'v\\d+\\.\\d+\\.\\d+.*', comparator: 'REGEXP'
-            expression { return params.Run_As_Master_Branch }
+            expression { return params.Run_As_Main_Branch }
             expression { return env.GITHUB_COMMENT?.contains('benchmark tests') }
           }
           expression { return params.bench_ci }
@@ -391,7 +391,7 @@ def getSmartTAVContext() {
    // Hard to debug what's going on as there are a few nested conditions. Let's then add more verbose output
    echo """\
    env.GITHUB_COMMENT=${env.GITHUB_COMMENT}
-   params.Run_As_Master_Branch=${params.Run_As_Master_Branch}
+   params.Run_As_Main_Branch=${params.Run_As_Main_Branch}
    env.CHANGE_ID=${env.CHANGE_ID}
    env.TAV_UPDATED=${env.TAV_UPDATED}""".stripIndent()
 
@@ -410,7 +410,7 @@ def getSmartTAVContext() {
          context.tav = readYaml(text: """TAV:${modules.collect{ it.replaceAll('"', '').replaceAll("'", '') }.collect{ "\n  - '${it}'"}.join("") }""")
        }
      }
-   } else if (params.Run_As_Master_Branch) {
+   } else if (params.Run_As_Main_Branch) {
      context.ghDescription = 'TAV Test param-triggered'
      context.tav = readYaml(file: '.ci/.jenkins_tav.yml')
    } else if (env.CHANGE_ID && env.TAV_UPDATED != "false") {
