--- a/.ci/jobs/apm-agent-nodejs-mbp.yml
+++ b/.ci/jobs/apm-agent-nodejs-mbp.yml
@@ -12,8 +12,8 @@
         discover-pr-origin: merge-current
         discover-tags: true
         notification-context: 'apm-ci'
-        # Run CI builds only on master, PRs, and non-EOL version branches.
-        head-filter-regex: '^(master|PR-.*|3\.x)$'
+        # Run CI builds only on main, PRs, and non-EOL version branches.
+        head-filter-regex: '^(main|PR-.*|3\.x)$'
         repo: apm-agent-nodejs
         repo-owner: elastic
         credentials-id: 2a9602aa-ab9f-4e52-baf3-b71ca88469c7-UserAndToken
