--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
   "homepage": "https://github.com/elastic/apm-agent-nodejs",
   "dependencies": {
     "@elastic/ecs-pino-format": "^1.2.0",
+    "@opentelemetry/api": "^1.0.4",
+    "@opentelemetry/sdk-trace-node": "^1.0.1",
     "after-all-results": "^2.0.0",
     "async-cache": "^1.1.0",
     "async-value-promise": "^1.1.1",
