--- a/.ci/.jenkins_tav.yml
+++ b/.ci/.jenkins_tav.yml
@@ -1,5 +1,6 @@
 TAV:
   - '@elastic/elasticsearch'
+  - '@elastic/elasticsearch-canary'
   - '@hapi/hapi'
   - '@koa/router'
   - apollo-server-express
