ci: support AWS lambda when a tag release

--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -7,12 +7,14 @@ pipeline {
     REPO = 'apm-agent-nodejs'
     BASE_DIR = "src/github.com/elastic/${env.REPO}"
     PIPELINE_LOG_LEVEL='INFO'
-    NOTIFY_TO = credentials('notify-to')
     JOB_GCS_BUCKET = credentials('gcs-bucket')
     GITHUB_CHECK_ITS_NAME = 'Integration Tests'
     ITS_PIPELINE = 'apm-integration-tests-selector-mbp/main'
     OPBEANS_REPO = 'opbeans-node'
     GITHUB_CHECK = 'true'
+    RELEASE_URL_MESSAGE = "(<https://github.com/elastic/${env.REPO}/releases/tag/${env.TAG_NAME}|${env.TAG_NAME}>)"
+    SLACK_CHANNEL = '#apm-agent-nodejs'
+    NOTIFY_TO = 'build-apm+apm-agent-nodejs@elastic.co'
   }
   options {
     timeout(time: 3, unit: 'HOURS')
@@ -274,6 +276,9 @@ pipeline {
         beforeAgent true
         tag pattern: 'v\\d+\\.\\d+\\.\\d+', comparator: 'REGEXP'
       }
+      environment {
+        SUFFIX_ARN_FILE = 'arn-file.md'
+      }
       stages {
         stage('Opbeans') {
           environment {
@@ -291,6 +296,50 @@ pipeline {
               gitPush()
               // The opbeans pipeline will trigger a release for the release tag
               gitCreateTag(tag: "${env.BRANCH_NAME}")
+            }
+          }
+        }
+        stage('Dist') {
+          steps {
+            withGithubNotify(context: "Dist") {
+              setEnvVar('ELASTIC_LAYER_NAME', "elastic-apm-node${getVersion()}")
+              deleteDir()
+              unstash 'source'
+              withNodeJSEnv(version: 'v14.17.5'){
+                dir("${BASE_DIR}"){
+                  cmd(label: 'aws lambda', script: '.ci/scripts/aws-lambda.sh')
+                }
+              }
+            }
+          }
+        }
+        stage('Publish') {
+          steps {
+            withGithubNotify(context: "Publish") {
+              withGoEnv(){
+                withAWSEnv(secret: 'secret/observability-team/ci/service-account/apm-aws-lambda', forceInstallation: true, version: '2.4.10') {
+                  dir("${BASE_DIR}"){
+                    cmd(label: 'make publish-in-all-aws-regions', script: 'make publish-in-all-aws-regions')
+                    cmd(label: 'make create-arn-file', script: 'make create-arn-file')
+                  }
+                }
+              }
+            }
+          }
+          post {
+            always {
+              archiveArtifacts(allowEmptyArchive: true, artifacts: "${BASE_DIR}/.regions")
+              archiveArtifacts(allowEmptyArchive: true, artifacts: "${BASE_DIR}/*${SUFFIX_ARN_FILE}")
+              archiveArtifacts(allowEmptyArchive: true, artifacts: "${BASE_DIR}/.aws")
+            }
+          }
+        }
+        stage('Release Notes') {
+          steps {
+            withGhEnv(forceInstallation: true, version: '2.4.0') {
+              dir("${BASE_DIR}"){
+                cmd(label: 'make release-notes', script: 'make release-notes')
+              }
             }
           }
         }
@@ -347,6 +396,16 @@ pipeline {
   post {
     cleanup {
       notifyBuildResult()
+    }
+    success {
+      whenTrue(isTag()) {
+        notifyStatus(slackStatus: 'good', subject: "[${env.REPO}] Release *${env.TAG_NAME}* published", body: "Build: (<${env.RUN_DISPLAY_URL}|here>)\nRelease URL: ${env.RELEASE_URL_MESSAGE}")
+      }
+    }
+    unsuccessful {
+      whenTrue(isTag()) {
+        notifyStatus(slackStatus: 'warning', subject: "[${env.REPO}] Release *${env.TAG_NAME}* could not be published.", body: "Build: (<${env.RUN_DISPLAY_URL}|here>)")
+      }
     }
   }
 }
@@ -504,4 +563,25 @@ def grabWorkerIP(){
     }
   }
   return linuxIp
+}
+
+/**
+* Transform TAG releases from v{major}.{minor}.{patch} to
+* ver-{major}-{minor}-{patch}. f.i: given v1.2.3 then
+* -ver-1-2-3.
+*/
+def getVersion() {
+  if (env.BRANCH_NAME?.trim() && env.BRANCH_NAME.startsWith('v')) {
+    return env.BRANCH_NAME.replaceAll('v', '-ver-').replaceAll('\\.', '-')
+  }
+  return ''
+}
+
+def notifyStatus(def args = [:]) {
+  releaseNotification(slackChannel: "${env.SLACK_CHANNEL}",
+                      slackColor: args.slackStatus,
+                      slackCredentialsId: 'jenkins-slack-integration-token',
+                      to: "${env.NOTIFY_TO}",
+                      subject: args.subject,
+                      body: args.body)
 }
