--- a/.ci/Makefile
+++ b/.ci/Makefile
@@ -1,19 +1,23 @@
 SHELL = /bin/bash -eo pipefail
 
-AWS_FOLDER = .aws
+AWS_FOLDER = aws
 
 export AWS_FOLDER
 
 build:
-	npm init -y
-	npm install --global-style https://github.com/elastic/apm-agent-nodejs#$(BRANCH_NAME)
-	mkdir nodejs
-	mv node_modules nodejs
+	rm -rf ../$(AWS_FOLDER) || true
+	mkdir -p ../$(AWS_FOLDER)
+	cd ../$(AWS_FOLDER); \
+		npm init -y; \
+		npm install --global-style https://github.com/elastic/apm-agent-nodejs#$(BRANCH_NAME); \
+		mkdir nodejs; \
+		mv node_modules nodejs
 env:
 	env
 dist: validate-branch-name build
 	rm -f $(BRANCH_NAME).zip || true
-	zip -r $(BRANCH_NAME).zip nodejs
+	cd ../$(AWS_FOLDER) ; \
+		zip -r $(BRANCH_NAME).zip nodejs
 
 # List all the AWS regions
 get-all-aws-regions:
@@ -43,7 +47,7 @@ publish: validate-layer-name validate-aws-default-region
 		--description "AWS Lambda Extension Layer for the Elastic APM Node.js Agent" \
 		--license "Apache-2.0" \
 		--compatible-runtimes nodejs14.x nodejs12.x nodejs10.x \
-		--zip-file "fileb://./$(BRANCH_NAME).zip"
+		--zip-file "fileb://../$(AWS_FOLDER)/$(BRANCH_NAME).zip"
 
 # Grant public access to the given LAYER in the given AWS region
 grant-public-layer-access: validate-layer-name validate-aws-default-region
@@ -76,7 +80,7 @@ release-notes: validate-branch-name validate-suffix-arn-file
 		--title '$(BRANCH_NAME)' \
 		--generate-notes \
 		--notes-file $(SUFFIX_ARN_FILE) \
-		./$(BRANCH_NAME).zip
+		../$(AWS_FOLDER)/$(BRANCH_NAME).zip
 
 validate-branch-name:
 ifndef BRANCH_NAME
