chore: ignore tmp/ dir in linting (as already done in .gitignore)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,9 @@
     "/test/sourcemaps/fixtures/lib",
     "/test/stacktraces/fixtures/dist",
     "/test/types/transpile/index.js",
-    "/test/types/transpile-default/index.js"
+    "/test/types/transpile-default/index.js",
+    "/test_output",
+    "/tmp"
   ]
 }
 
