--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -328,9 +328,7 @@ pipeline {
           }
           post {
             always {
-              archiveArtifacts(allowEmptyArchive: true, artifacts: "${BASE_DIR}/.regions")
-              archiveArtifacts(allowEmptyArchive: true, artifacts: "${BASE_DIR}/${SUFFIX_ARN_FILE}")
-              archiveArtifacts(allowEmptyArchive: true, artifacts: "${BASE_DIR}/aws")
+              archiveArtifacts(allowEmptyArchive: true, artifacts: "${BASE_DIR}/build-aws")
             }
           }
         }
