chore: use e.g rather than f.i

--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -566,7 +566,7 @@ def grabWorkerIP(){
 
 /**
 * Transform TAG releases from v{major}.{minor}.{patch} to
-* ver-{major}-{minor}-{patch}. f.i: given v1.2.3 then
+* ver-{major}-{minor}-{patch}. e.g: given v1.2.3 then
 * -ver-1-2-3.
 */
 def getVersion() {
