--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -343,6 +343,18 @@ pipeline {
           }
         }
       }
+      post {
+        success {
+          whenTrue(isTag()) {
+            notifyStatus(slackStatus: 'good', subject: "[${env.REPO}] Release *${env.TAG_NAME}* published", body: "Build: (<${env.RUN_DISPLAY_URL}|here>)\nRelease URL: ${env.RELEASE_URL_MESSAGE}")
+          }
+        }
+        unsuccessful {
+          whenTrue(isTag()) {
+            notifyStatus(slackStatus: 'warning', subject: "[${env.REPO}] Release *${env.TAG_NAME}* could not be published.", body: "Build: (<${env.RUN_DISPLAY_URL}|here>)")
+          }
+        }
+      }
     }
     /**
       Run the benchmarks and store the results on ES.
@@ -395,16 +407,6 @@ pipeline {
   post {
     cleanup {
       notifyBuildResult()
-    }
-    success {
-      whenTrue(isTag()) {
-        notifyStatus(slackStatus: 'good', subject: "[${env.REPO}] Release *${env.TAG_NAME}* published", body: "Build: (<${env.RUN_DISPLAY_URL}|here>)\nRelease URL: ${env.RELEASE_URL_MESSAGE}")
-      }
-    }
-    unsuccessful {
-      whenTrue(isTag()) {
-        notifyStatus(slackStatus: 'warning', subject: "[${env.REPO}] Release *${env.TAG_NAME}* could not be published.", body: "Build: (<${env.RUN_DISPLAY_URL}|here>)")
-      }
     }
   }
 }
