--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -349,7 +349,7 @@ pipeline {
             notifyStatus(slackStatus: 'good', subject: "[${env.REPO}] Release *${env.TAG_NAME}* published", body: "Build: (<${env.RUN_DISPLAY_URL}|here>)\nRelease URL: ${env.RELEASE_URL_MESSAGE}")
           }
         }
-        unsuccessful {
+        failure {
           whenTrue(isTag()) {
             notifyStatus(slackStatus: 'warning', subject: "[${env.REPO}] Release *${env.TAG_NAME}* could not be published.", body: "Build: (<${env.RUN_DISPLAY_URL}|here>)")
           }
