--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -329,7 +329,7 @@ pipeline {
           }
           post {
             always {
-              archiveArtifacts(allowEmptyArchive: true, artifacts: "${BASE_DIR}/build-aws")
+              archiveArtifacts(allowEmptyArchive: true, artifacts: "${BASE_DIR}/build/aws")
             }
           }
         }
