--- a/package.json
+++ b/package.json
@@ -94,7 +94,6 @@
     "fast-safe-stringify": "^2.0.7",
     "http-headers": "^3.0.2",
     "is-native": "^1.0.1",
-    "load-source-map": "^2.0.0",
     "lru-cache": "^6.0.0",
     "measured-reporting": "^1.51.1",
     "monitor-event-loop-delay": "^1.0.0",
@@ -108,6 +107,7 @@
     "semver": "^6.3.0",
     "set-cookie-serde": "^1.0.0",
     "shallow-clone-shim": "^2.0.0",
+    "source-map": "^0.8.0-beta.0",
     "sql-summary": "^1.0.1",
     "traceparent": "^1.0.0",
     "traverse": "^0.6.6",
