ci: run more often

--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -28,6 +28,7 @@ pipeline {
   }
   triggers {
     issueCommentTrigger("(${obltGitHubComments()}|^run (module|benchmark) tests.*)")
+    cron('H */3 * * 1-5')
   }
   parameters {
     booleanParam(name: 'Run_As_Main_Branch', defaultValue: false, description: 'Allow to run any steps on a PR, some steps normally only run on main branch.')
