feat: OpenTelemetry Bridge
This commit is a first stab that is mostly just stubbing out adding
global providers (e.g. `api.trace.setGlobalTracerProvider`). It
includes a first very incomplete Tracer.startSpan() such that this:

    cd examples/otelbridge1
    npm install
    node -r elastic-apm-node/opentelemetry.js example-http-request.js

yields a trace like:

    trace 266fcd
    `- transaction ba0b1f "makeRequest" (218.075ms, outcome=unknown)

IOW, context management isn't being handled yet, so instrumentation that
adds spans does nothing.

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
   "homepage": "https://github.com/elastic/apm-agent-nodejs",
   "dependencies": {
     "@elastic/ecs-pino-format": "^1.2.0",
+    "@opentelemetry/api": "^1.0.4",
     "after-all-results": "^2.0.0",
     "async-cache": "^1.1.0",
     "async-value-promise": "^1.1.1",
