--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
   "ignorePatterns": [
     "/.nyc_output",
     "/build",
+    "node_modules",
     "/test/babel/out.js",
     "/test/sourcemaps/fixtures/lib",
     "/test/stacktraces/fixtures/dist",
