--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
     "/.nyc_output",
     "/build",
     "node_modules",
+    "/lib/opentelemetry-sdk/opentelemetry-core-mini",
     "/test/babel/out.js",
     "/test/sourcemaps/fixtures/lib",
     "/test/stacktraces/fixtures/dist",
