--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "object-identity-map": "^1.0.2",
     "original-url": "^1.2.3",
     "pino": "^6.11.2",
+    "random-poly-fill": "^1.0.1",
     "read-pkg-up": "^7.0.1",
     "relative-microtime": "^2.0.0",
     "require-in-the-middle": "^5.0.3",
@@ -109,7 +110,6 @@
     "shallow-clone-shim": "^2.0.0",
     "source-map": "^0.8.0-beta.0",
     "sql-summary": "^1.0.1",
-    "traceparent": "^1.0.0",
     "traverse": "^0.6.6",
     "unicode-byte-truncate": "^1.0.0"
   },
