--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
+    "@cucumber/cucumber": "^8.1.2",
     "@elastic/elasticsearch": "^7.15.0",
     "@elastic/elasticsearch-canary": "^8.1.0-canary.2",
     "@hapi/hapi": "^20.1.2",
