--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -15,6 +15,8 @@ pipeline {
     RELEASE_URL_MESSAGE = "(<https://github.com/elastic/${env.REPO}/releases/tag/${env.TAG_NAME}|${env.TAG_NAME}>)"
     SLACK_CHANNEL = '#apm-agent-node'
     NOTIFY_TO = 'build-apm+apm-agent-nodejs@elastic.co'
+    NPMRC_SECRET = 'secret/jenkins-ci/npmjs/elasticmachine'
+    TOTP_SECRET = 'totp/code/npmjs-elasticmachine'
   }
   options {
     timeout(time: 3, unit: 'HOURS')
@@ -315,7 +317,7 @@ pipeline {
             }
           }
         }
-        stage('Publish') {
+        stage('Publish to AWS') {
           steps {
             withGithubNotify(context: "Publish") {
               withGoEnv(){
@@ -339,6 +341,19 @@ pipeline {
             withGhEnv(forceInstallation: true, version: '2.4.0') {
               dir("${BASE_DIR}"){
                 cmd(label: 'make release-notes', script: 'make -C .ci release-notes')
+              }
+            }
+          }
+        }
+        stage('Publish to npm') {
+          steps {
+            withNodeJSEnv(version: 'v14.17.5') {
+              withNpmrc(secret: "${env.NPMRC_SECRET}", path: "${env.WORKSPACE}/${env.BASE_DIR}") {
+                withTotpVault(secret: "${env.TOTP_SECRET}", code_var_name: 'TOTP_CODE') {
+                  dir("${BASE_DIR}") {
+                    sh(label: 'npm-publish', script: 'npm publish --otp="${env.TOTP_CODE}"')
+                  }
+                }
               }
             }
           }
